src/tests/testfiles/function-declarations/10.txt
Error at 1:1: Identifier sum already taken by function
int sum(int a, int b);
^
